# real-time-ML-system

./: .gitignore  README.md  quix.yaml
docker-compose/: Makefile  backfill_pipeline.yml  feature_dashboard.yml  feature_pipeline.yml  redpanda.yml
services/feature_dashboard/: Dockerfile  Makefile  pyproject.toml  setup_config.ps1  setup_config.sh  setup_credential.ps1  setup_credential.sh
services/feature_dashboard/src/: backend.py  config.py  frontend.py  plot.py
services/kafka_to_feature_store/: Dockerfile  app.yaml  makefile  pyproject.toml  setup_credential.sh  setup_historical_config.sh  setup_live_config.sh
services/kafka_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/price_predictor/: Dockerfile  README.md  app.yaml  makefile  pyproject.toml
services/price_predictor/notebooks/: training.ipynb
services/price_predictor/src/: api.py  baseline_model.py  data_preprocessing.py  feature_engineering.py  model_factory.py  predictor.py  training.py  utils.py
services/price_predictor/tools/: makefile  pyproject.toml
services/price_predictor/tools/tools/: ohlc_data_writer.py
services/trade-producer/: .pre-commit-congif.yaml  Makefile  pyproject.toml  setup_historical_config.sh
services/trade-producer/src/: kraken_api.py  main.py
services/trade-producer/src/kraken_api/: rest.py  websocket.py
services/trade_producer/: Dockerfile  Makefile  app.yaml  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/trade_producer/src/: config.py  kraken_api.py  main.py
services/trade_producer/src/kraken_api/: rest.py  trade.py  websocket.py
services/trade_to_ohlc/: Dockerfile  Makefile  app.yaml  historical.env  live.env  pyproject.toml  setup_historical_config.sh  setup_live_config.sh
services/trade_to_ohlc/src/: config.py  main.py
tools/: pyproject.toml
tools/tools/: ohlc_data_reader.py
