[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["shahnoor77 <shahnoorkhan9955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = "^1.35.0"
pydantic-settings = "^2.3.3"
loguru = "^0.7.2"
bokeh = "2.4.3"
python-dotenv = "^1.1.0"

click = "^8.1.8"
hopsworks = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
