[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["shahnoor77 <shahnoorkhan9955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
loguru = "^0.7.2"
scikit-learn = "^1.5.0"
comet-ml = "^3.43.2"
matplotlib = "^3.9.0"
flask = "^3.0.3"
gunicorn = "^22.0.0"
xgboost = "2.0.0"
optuna = "^3.6.1"
pandas = "^2.0.0"
numpy = "^1.26.4"
ta-lib = "^0.4.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ruff = "^0.0.286"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
extend-select = ["I"]
