[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["shahnoor77 <shahnoorkhan9955@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websocket-client = "1.8.0"
quixstreams = "2.5.1"
loguru = "0.7.2"
pydantic-settings = "2.3.0"
python-dotenv = "1.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

